k8s/bad-resources.yaml
# 1. 存在しないイメージを指定したPod(ImagePullBackOff, Warning項目複数)
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-image
  labels:
    app: existing-app
spec:
  containers:
  - name: typo-container
    image: nginx:super-typo-version-12345 # このようなイメージは存在しない->ImagePullBackOff(Critical)
    # Liveness Probeなし、CPU requestsなし (warning)

---
# 2. 起動直後に異常終了するPod(CrashLoopBackOff, Warning項目複数)
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-crash
  labels:
    app: existing-app
spec:
  containers:
  - name: crashing-container
    image: busybox
    command: ["/bin/sh", "-c", "exit 1"]
    # シェルを起動して、エラーコード1を返して強制終了->CrashLoopBackOff(Critical)
    # Liveness Probeなし、CPU requestsなし (warning)

---
# 3. 可用性が低く、ダウンタイムが発生するDeployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bad-deployment
spec:
  replicas: 1 # 2未満(warning)
  strategy:
    type: Recreate # ダウンタイムあり(warning)
  selector:
    matchLabels:
      app: dummy-web
  template:
    metadata:
      labels:
        app: dummy-web
    spec:
      containers:
      - name: nginx
        image: nginx:latest

---
# 4. 意図しない外部公開設定になっているService
apiVersion: v1
kind: Service
metadata:
  name: bad-service-exposed
spec:
  type: NodePort # 外部公開用(Warning)
  selector:
    app: existing-app
  ports:
  - port: 80
    targetPort: 80

---
# 5. どのPodにも紐づいていない迷子のService(Critical)
apiVersion: v1
kind: Service
metadata:
  name: bad-service-orphan
spec:
  type: ClusterIP
  selector:
    app: non-existent-app-label # ラベルを持つPodは存在しない(Critical)
  ports:
  - port: 8080
    targetPort: 8080
